--- a/assets/css/cardapio.css
+++ b/assets/css/cardapio.css
@@ -49,6 +49,7 @@ body {
 .container {
     flex-grow: 1;
     max-width: 600px; 
+    margin-top: 0;
     margin-left: auto;
     margin-right: 80px;
     padding: 20px;
