--- a/assets/css/gerenciar_produtos.css
+++ b/assets/css/gerenciar_produtos.css
@@ -128,6 +128,7 @@ button {
     font-size: 1em;
     transition: background-color 0.3s ease, transform 0.2s ease;
     align-self: start; /* Alinha o botão ao início da linha no grid */
+    margin-top: 10px;
 }
 
 button:hover {
