--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,21 @@
 /* assets/css/style.css */
 /* Estilos básicos para o layout, cores, fontes, etc. */
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
+    background-image: url('../../assets/images/foodtruck-background.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+    background-repeat: no-repeat;
     background-color: #f4f4f4;
     color: #333;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     line-height: 1.6;
+    /* Altera o layout para flexbox e remove a altura fixa */
+    display: flex;
+    flex-direction: column;
+    margin: 0;
+    padding: 0;
 }
 
 header {
@@ -70,13 +79,14 @@ main {
 
 footer {
     text-align: center;
-    padding: 1.5em 0;
+    padding: 0.8em 0;
     background-color: #333;
     color: #fff;
     position: relative;
     bottom: 0;
     width: 100%;
     margin-top: 30px;
+    
 }
 
 .login-container, .menu-list, .order-registration, .order-tracking, .review-registration, .order-preparation {
